設計模式整理

--- a/设计模式.md
+++ b/设计模式.md
@@ -25,64 +25,64 @@ grammar_cjkRuby: true
 ##### 定义
 
 __开闭原则（Open Close Principle)__
-	   指的是一个软件实体应对扩展开发，对修改关闭(Software entities should be open for extension, but closed for modification)。这个原则是说在设计一个模块的时候，应对使这个模块可以在不被修改的前提下被扩展，换言之，应对可以不必修改源代码的情况下改变这个模块的行为。 
+	   指的是一个软件实体应对扩展开发，对修改关闭(Software entities should be open for extension, but closed for modification)。这个原则是说在设计一个模块的时候，应对使这个模块可以在不被修改的前提下被扩展，换言之，应对可以不必修改源代码的情况下改变这个模块的行为。 
 	   根据开闭原则，在设计一个软件系统模块（类，方法）的时候，应该可以在不修改原有的模块（修改关闭）的基础上，能扩展其功能（扩展开放）。
 	   
-		- 扩展开放：某模块的功能是可扩展的，则该模块是扩展开放的。软件系统的功能上的可扩展性要求模块是扩展开放的。 
+		- 扩展开放：某模块的功能是可扩展的，则该模块是扩展开放的。软件系统的功能上的可扩展性要求模块是扩展开放的。 
 
 		- 修改关闭：某模块被其他模块调用，如果该模块的源代码不允许修改，则该模块修改关闭的。软件系统的功能上的稳定性，持续性要求是修改关闭的。
 ##### 例子
 ```java
-interface Fruit   
+interface Fruit   
 {
- 	public void plant();
-	public void blossom();
-	public void outcome();
+ 	public void plant();
+	public void blossom();
+	public void outcome();
 }
 
-class Apple implements Fruit   
+class Apple implements Fruit   
 {
 	Apple() { this.plant(); }
-	public void plant() { System.out.println("Plant a apple"); };
-	public void blossom() { System.out.println("Apple blossomed"); };
-	public void outcome() { System.out.println("Apple outcomed"); };
+	public void plant() { System.out.println("Plant a apple"); };
+	public void blossom() { System.out.println("Apple blossomed"); };
+	public void outcome() { System.out.println("Apple outcomed"); };
 }
 
-interface gardenerBase //Garden,是不能改变的.以后增加一个水果只需要 再写个类继承它!   
+interface gardenerBase //Garden,是不能改变的.以后增加一个水果只需要 再写个类继承它!   
 {
-	public Fruit getFruit();
+	public Fruit getFruit();
 }
 
-class AppleGardener implements gardenerBase//种植Apple的Garden   
+class AppleGardener implements gardenerBase//种植Apple的Garden   
 {
-	private static AppleGardener singleton;
-	private AppleGardener() { ; }
-	public static AppleGardener getGardener()
+	private static AppleGardener singleton;
+	private AppleGardener() { ; }
+	public static AppleGardener getGardener()
 	{
 		if (singleton == null)
-			singleton  = new AppleGardener();
-		return singleton;
+			singleton  = new AppleGardener();
+		return singleton;
 	}
 	
-	public Fruit getFruit()
+	public Fruit getFruit()
 	{
-		return new Apple();
+		return new Apple();
 	}
 }
 
-public class MyFirstOCPJAVA   
+public class MyFirstOCPJAVA   
 {
-	public static void main(String []a)
+	public static void main(String []a)
 	{
-		Fruit tempApple;
-		gardenerBase appleGarden  = AppleGardener.getGardener();
-		tempApple  = appleGarden.getFruit();
+		Fruit tempApple;
+		gardenerBase appleGarden  = AppleGardener.getGardener();
+		tempApple  = appleGarden.getFruit();
 
-		Fruit tempPear;
-		gardenerBase pearGarden  = PearGardener.getGardener();
-		tempPear  = pearGarden.getFruit();
+		Fruit tempPear;
+		gardenerBase pearGarden  = PearGardener.getGardener();
+		tempPear  = pearGarden.getFruit();
 	}
-}  
+}  
 ```
 ### 设计模式原则之二——里氏替换原则
 ##### 一、定义
@@ -104,7 +104,7 @@ __里氏代换原则（Liskov Substitution Principle）__
 ###### 知识点：
 	• 低层模块：系统不可分割的原子逻辑（会根据业务逻辑经常变化）
 	• 高层模块：低层模块的再组合，对低层模块的抽象。
-	• 抽象： 接口或抽象类（是底层模块的抽象，特点：不能直接被实例化）
+	• 抽象： 接口或抽象类（是底层模块的抽象，特点：不能直接被实例化）
 	• 与接口或抽象类对应的实现类：低层模块的具体实现（特点：可以直拉被实例化）
 
 
@@ -278,7 +278,7 @@ class HondaCar
 ### 设计模式原则之四——接口隔离原则
 ##### 一、定义
 __接口隔离原则（Interface Segregation Principle）：__
-	客户端不应该依赖它不需要的接口； 一个类对另一个类的依赖应该建立在最小的接口上。
+	客户端不应该依赖它不需要的接口； 一个类对另一个类的依赖应该建立在最小的接口上。
 	
 定义包含三层含义：
 	• 一个类对另一个类的依赖应该建立在最小的接口上；
@@ -295,7 +295,7 @@ __接口隔离原则（Interface Segregation Principle）：__
 				
 __使用接口隔离原则，意在设计一个短而小的接口和类__ ,我们常说的高内聚低耦合的设计思想，从而使得类具有很好的可读性、可扩展性和可维护性。
          在项目开发中，依赖几个专用的接口要比依赖一个综合的接口更加灵活。通过分散定义多个接口，可以预防外来变更的扩散，提高系统的灵活性和可维护性。
-     虽然接口隔离原则很有意义，但在实际项目中，应该注意度的把握，接口设计的过大或过小都不好，应该根据实际情况多思考再进行设计。
+     虽然接口隔离原则很有意义，但在实际项目中，应该注意度的把握，接口设计的过大或过小都不好，应该根据实际情况多思考再进行设计。
 ### 设计模式原则之五——迪米特法则
 ##### 一、定义
 __迪米特法则（最少知道原则）（Demeter Principle）：__
@@ -324,7 +324,7 @@ __.		知识点：__
 ***==C++例子：==***
 
 		举个例子: 假如有一个需求是打印一个省份下面的所有的县，所有的县都是录属于某一个市。
-		新建3个不同的类,Province (省), Town(市), County(县) 
+		新建3个不同的类,Province (省), Town(市), County(县) 
 ```c++
 /*(1).Class Town*/
 	class Town
@@ -423,13 +423,13 @@ __合成复用原则（Composite Reuse Principle）__
 		
 
 		为什么要使用合成复用原则： 	
-		. 对象的继承关系在编译时就定义好了，所以无法在运行时改变从父类继承的子类的实现 	
-		. 子类的实现和它的父类有非常紧密的依赖关系，以至于父类实现中的任何变化必然会导致子类发生变化
+		. 对象的继承关系在编译时就定义好了，所以无法在运行时改变从父类继承的子类的实现 	
+		. 子类的实现和它的父类有非常紧密的依赖关系，以至于父类实现中的任何变化必然会导致子类发生变化
 		当你复用子类的时候，如果继承下来的实现不适合解决新的问题，则父类必须重写或者被其它更适合的类所替换
 		这种依赖关系限制了灵活性，并最终限制了复用性。*
 ### 设计模式之抽象工厂模式
 ##### 一、定义
-	为创建一组相关或相互依赖的对象提供一个接口，而且无需指定他们的具体类。	
+	为创建一组相关或相互依赖的对象提供一个接口，而且无需指定他们的具体类。它是创建型模型。	
 ##### 二、模型
 ![抽象工厂模式](抽象工厂模式.JPG)
 #####  三、解析
@@ -445,7 +445,7 @@ __合成复用原则（Composite Reuse Principle）__
 		2、生成不同操作系统的程序。
 ### 设计模式之工厂方法模式
 ##### 一、定义
-		工厂方法模式（FACTORY METHOD）是一种常用的对象创建型设计模式，此模式的核心精神是封装类中不变的部分，提取其中个性化善变的部分为独立类，通过依赖注入以达到解耦、复用和方便后期维护拓展的目的。它的核心结构有四个角色，分别是抽象工厂；具体工厂；抽象产品；具体产品!
+		工厂方法模式（FACTORY METHOD）是一种常用的对象创建型设计模式，此模式的核心精神是封装类中不变的部分，提取其中个性化善变的部分为独立类，通过依赖注入以达到解耦、复用和方便后期维护拓展的目的。它的核心结构有四个角色，分别是抽象工厂；具体工厂；抽象产品；具体产品。它是创建型模型。
 ##### 二、模型
 ![工厂方法模式](工厂方法模式.JPG)
 #####  三、解析
@@ -463,7 +463,7 @@ __合成复用原则（Composite Reuse Principle）__
 		一个类通过其子类来指定创建哪个对象：在工厂方法模式中，对于抽象工厂类只需要提供一个创建产品的接口，而由其子类来确定具体要创建的对象，利用面向对象的多态性和里氏代换原则，在程序运行时，子类对象将覆盖父类对象，从而使得系统更容易扩展。
 ### 设计模式之单例模式
 ##### 一、定义
-		应用该模式的类一个类只有一个实例。即一个类只有一个对象实例。
+		应用该模式的类一个类只有一个实例。即一个类只有一个对象实例。它是创建型模型。
 ==单例模式有三种：饿汉式、懒汉式和登记式。==
 ##### 二、模型
 ![单例模式](单例模式.png)
@@ -522,11 +522,11 @@ public class SingleFilePro{
 **==特点：==** 具备前面二者的优点，是最好的单例模式。
 ### 设计模式之观察者模式
 ##### 一、定义
-		定义对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都得到通知并被自动更新。
+		定义对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都得到通知并被自动更新。它是行为型模型。
 ##### 二、模型
 ![观察者模式.](观察者模式.png)
 #####  三、解析
-**==优点：==** 
+**==优点：==** 
 
 		1、观察者和被观察者是抽象耦合的。 
 		2、建立一套触发机制。
@@ -2116,25 +2116,25 @@ AMError ProductAlarmManager::InterFace_SetAlarmMsgQueuePnt(ThreadSafeDeque<strin
 ```
 ### 设计模式之策略模式
 ##### 一、定义 
-	一个类的行为或其算法可以在运行时更改。具体来说就是对象有某个行为，但是在不同的场景中，该行为有不同的实现算法。
+	一个类的行为或其算法可以在运行时更改。具体来说就是对象有某个行为，但是在不同的场景中，该行为有不同的实现算法。它是行为型模型。
 ##### 二、模型
 ![策略模式](策略模式.png)
 ##### 三、解析
-**==优点：==**
+**==优点： #0bee0b==**
 
 		1、提供了一套管理算法簇的办法，可以自由调换算法。 
 		2、避免使用多重条件判断、 更方便逻辑维护。
 		3、扩展性良好。
-**==缺点：==**
+**==缺点： #fc0606==**
 
 		1、策略类会增多，且每一个具体策略都会产生相应的策略类。
 		2、所有策略类都需要对外暴露，客户要知晓所有算法行为。
-**==使用场景：==**
+**==使用场景： #0423fc==**
 
 		1、如果在一个系统里面有许多类，它们之间的区别仅在于它们的行为，那么使用策略模式可以动态地让一个对象在许           多行为中选择一种行为。
 		 2、一个系统需要动态地在几种算法中选择一种。
 		 3、如果一个对象有很多的行为，如果不用恰当的模式，这些行为就只好使用多重的条件选择语句来实现。
-**==注意事项：==**
+**==注意事项： #fd3bff==**
 
 		如果一个系统的策略多于四个，就需要考虑使用混合模式，解决策略类膨胀的问题。
 **==*例子：*==**
@@ -2225,5 +2225,200 @@ public class ImgPro {
 	    context = new Context(new CloseOpr());      
 	    context.executeStrategyController("sds", (float)1.5, (float)1.1, (float)2.3);
 	   }
+}
+```
+### 设计模式之模板模式
+##### 一、定义 
+	定义一个模板结构，将具体内容延迟到子类去实现。它是行为型模型。
+##### 二、模型
+![模板模式](模板模式.JPG)
+##### 三、解析
+**==主要作用：==**
+
+		可以在不改变模板结构的前提下，在其子类中重新定义模板中的行为。
+**==优点： #0bee0b==**
+
+		1） 提高代码复用性
+    		将相同部分的代码放在抽象的父类中，便于维护。
+		2）  提高了拓展性
+			将不同的代码放入不同的子类中，通过对子类的扩展增加新的行为。
+		3）  实现了反向控制
+			通过一个父类调用其子类的操作，通过对子类的扩展增加新的行为（行为又父类控制、子类实现），实现了反向控制 & 符合“开闭原则”。
+**==缺点： #fc0606==**
+
+		引入了抽象类，每一个不同的实现都需要一个子类来实现，导致类的个数增加，从而增加了系统实现的复杂度。
+**==应用场景 #0423fc==**
+
+  		 一次性实现一个算法的不变的部分，并将可变的行为留给子类来实现；
+   		 各子类中公共的行为应被提取出来并集中到一个公共父类中以避免代码重复；
+   		 控制子类的扩展。
+
+**==*例子：*==**
+
+``` java
+/*定位基类*/
+public abstract class ObjectLocation {
+	/*图像获取*/
+	void ImgGet(){
+		/*从图像源获取图像*/
+	}
+	
+	/*图像预处理*/
+	abstract void ImgPreproccess();
+	
+	/*感兴区域设置*/
+	void SetRoi(){
+		/*设置视野的感性区域*/
+	}
+	
+	/*定位*/
+	abstract void Locating();
+	
+	/*对外输出位置*/
+	public void ExportLocation(){
+		this.ImgGet();
+		this.ImgPreproccess();
+		this.SetRoi();
+		this.Locating();
+	}
+}
+
+/*模板匹配*/
+public class TemplateMatching extends  ObjectLocation{
+	/*图像预处理*/
+	void ImgPreproccess(){
+		/*图像预处理方法1*/
+	}
+
+	/*定位*/
+	void Locating(){
+		/*基于边缘轮廓的模板匹配定位方法*/
+		System.out.println("模板匹配定位(X, Y)：");
+	}
+}
+
+/*机器学习*/
+public class MachineLearning extends  ObjectLocation{
+	/*图像预处理*/
+	void ImgPreproccess(){
+		/*图像预处理方法2*/
+	}
+
+	/*定位*/
+	void Locating(){
+		/*基于机器学习定位方法*/
+		System.out.println("机器学习定位(X, Y)：");
+	}
+}
+
+/*客户调用*/
+public class MyDo{ 
+	public static void main(String[] args){ 
+		//模板匹配定位
+		ObjectLocation moselLctn = new TemplateMatching();
+		moselLctn.ExportLocation();
+		
+		//机器学习定位
+		moselLctn = new MachineLearning();
+		moselLctn.ExportLocation();
+	}
+}
+```
+### 设计模式之适配器模式
+##### 一、定义 
+		适配器模式：将一个类的接口转换成客户希望的另一个接口。适配器模式让那些接口不兼容的类可以一起工作。它是结构型模型。
+##### 二、模型
+![适配器模式](适配器模式.JPG)
+##### 三、解析
+**==何时使用：==**
+
+		1、系统需要使用已有的类，但是这个类的接口不符合系统的要求。 
+		2、想要建立一个可以重复使用的类，用于与一些彼此之间没有太大关联的一些类，包括一些可能在将来引进的类一起工作，这些源类不一定有一致的接口。 
+		030、通过接口转换，将一个类插入另一个类系中。
+**==优点： #0bee0b==**
+
+		1、将目标类和适配者类解耦，通过引入一个适配器类来重用现有的适配者类，而无需修改原有结构。以此实现两个没有关联的类一起运行。 
+		2、提高了类的复用。
+		3、增加了类的透明度。
+		4、灵活性和扩展性良好。 
+**==缺点： #fc0606==**
+
+		1、过多地使用适配器，会让系统结构变得非常零乱，不易整体进行把握，增加了系统的复杂性。
+		2.一次最多只能适配一个适配者类，不能同时适配多个适配者，而且目标类必须是抽象类。 
+**==例子：==**
+
+		场景：公司开发的安防系统中，原本是通过公司派发给访客临时进出证(带电磁感应）时刻追踪客户在公司办公场地中的位置的，线下由于人工智能的发展及落地，需要在不影响原有功能及系统结构的情况下，通过机器学习的方法来追踪访客，其中机器学习的方式又有两种方式，人脸及人形追踪，并且这两种应用已经被另一个团队封装为一个现成的组件。
+		现使用适配器模式设计一个系统，实现需求。
+		
+
+``` java
+/*************************************************************************************************************/
+/*人工智能追踪接口*/
+public interface IAITracker {
+	public void AITracking();
+}
+
+/*人脸追踪类*/
+public class FaceTracker implements IAITracker{
+	@Override
+	public void AITracking(){
+		/*
+		    人脸追踪
+		 */
+	}
+}
+
+/*人形追踪*/
+public class FigureTacker implements IAITracker{
+	@Override
+	public void AITracking(){
+		/*
+		    人型追踪
+		 */
+	}
+}
+/*************************************************************************************************************/
+/*原追踪接口*/
+public interface  ITracker {
+	public void tracking();
+}
+
+/*ITracker的适配器器类*/
+public class TrackerAdapter implements ITracker{
+	@Autowired
+	private IAITracker aiTracker;
+	
+	@Override
+	public void tracking(String type){
+		if(type.equalsIgnoreCase("face")){
+			aiTracker = new FaceTracker();
+		}else if(type.equalsIgnoreCase("figure")){
+			aiTracker = new FigureTacker();
+		}
+		aiTracker.AITracking();
+	}
+}
+	
+/*原来的 ITracker 接口的实体类*/
+public class InductionTracker implements ITracker{
+
+	@Override
+	public void tracking(String type){
+		if(type.equalsIgnoreCase("induction")){
+			System.out.println("************电磁追踪************");
+		}
+	}
+}
+/*************************************************************************************************************/
+/*客戶端調用*/
+public class AdapterClient{ 
+	public static void main(String[] args){ 
+		ITracker tracker;
+		tracker = new InductionTracker();
+		tracker.tracking("induction");
+		tracker = new TrackerAdapter();
+		tracker.tracking("face");
+		tracker.tracking("figure");
+	}
 }
 ```
